Creation of plan to implementing backend logic for StartLabRoad API endpoint.
