# backend/docs/swagger.json
@@ -418,7 +418,7 @@
                 }
             }
         },
-        "/private/labs/{ID}": {
+        "/private/labs/{programmingID}": {
             "get": {
                 "description": "Get Labs By Programming Language ID",
                 "consumes": [
@@ -435,7 +435,7 @@
                     {
                         "type": "string",
                         "description": "Programming Language ID",
-                        "name": "ID",
+                        "name": "programmingID",
                         "in": "path",
                         "required": true
                     }
@@ -716,40 +716,6 @@
                 }
             }
         },
-        "/private/road/start": {
-            "post": {
-                "description": "Start",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Road"
-                ],
-                "summary": "Start",
-                "parameters": [
-                    {
-                        "description": "Start",
-                        "name": "start",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.StartDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.BaseResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/private/road/{programmingID}": {
             "get": {
                 "description": "Get Road with Paths",
@@ -789,6 +755,38 @@
                                     }
                                 }
                             ]
+                        }
+                    }
+                }
+            }
+        },
+        "/private/start/{programmingID}": {
+            "get": {
+                "description": "Start",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "StartLabRoad"
+                ],
+                "summary": "Start",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "programmingID",
+                        "name": "programmingID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.BaseResponse"
                         }
                     }
                 }
@@ -1267,17 +1265,6 @@
                 },
                 "roadHours": {
                     "type": "number"
-                }
-            }
-        },
-        "dto.StartDTO": {
-            "type": "object",
-            "required": [
-                "programmingID"
-            ],
-            "properties": {
-                "programmingID": {
-                    "type": "integer"
                 }
             }
         },
